static/accounts/css/settings.css
.settings {
  height: max(100%,100vh);
  margin: 0;
  display: flex;
  justify-content: center; /* horizontal */
  align-items: center;     /* vertical */
}

.settings-title {
    font-size: 30px;
}
.settings-subtitle {
    font-size: 25px;
}

.center-box {
  width: 50%;
  height: 50%;
}
.center-box li {
    text-align: center;
    border: 1px solid var(--settings-bg);   /* box around item */
    padding: 8px 12px;         /* space inside the box */
    border-radius: 20px;        /* slightly rounded corners */
    margin-bottom: 8px;
    background-color: var(--settings-bg); 
    display: flex;
    align-items: center;
    gap: 10px; 
}

.center-box ul {
    list-style: none;
    padding: 20px;
}

.custom-check input {
  display: none; /* hide the original */
}

.custom-check .checkmark {
  width: 30px;
  height: 30px;
  background-color: #00bfcf;
  border-radius: 4px;
  display: inline-block;
  position: relative;
}

.custom-check input:checked + .checkmark {
  background-color: #00bfcf;   /* checked background */

}

.custom-check input:checked + .checkmark::after {
  content: '';
  position: absolute;
  left: 12px;
  top: 7px;
  width: 5px;
  height: 10px;
  border: solid white;
  border-width: 0 2px 2px 0;
  transform: rotate(45deg);   /* draws the checkmark */
}

.text {
    flex: 1;
    text-align: center;
}

